--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.0",
     "@prisma/client": "^5.11.0",
     "bcryptjs": "^2.4.3",
